# sidwizard-driver

./: AGENTS.md  README.md  SHARED_INFRA.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  publish.yml
sidwizard_driver/: __init__.py  capture.py  d64.py  dump.py  fetch.py  ghost_dump.py  keys.py  screen.py  sidwizard.py  smoke.py  vice_docker.py
sidwizard_driver/fixtures/: bronkosaurus.reference.csv  euphoria.reference.csv  flashitback.reference.csv  rain8580.reference.csv
tests/integration/: conftest.py  test_smoke.py
tests/unit/: test_capture.py  test_d64.py  test_dump.py  test_fetch.py  test_ghost_dump.py  test_lint.py  test_sidwizard.py
